--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "mysql2": "^3.12.0",
+    "mysql2": "^3.12.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
