--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.12.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
